# EvoTales

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: arcade-documentation.mdc  examples.mdc
assets/maps/: tiles_packed_planes.tsx  uniform_map.json
src/: config.py  entities.py  environment.py  input_controller.py  main.py  sim_window.py  sprite_config.py  sprite_manager.py
src/entities/: carnivore.py  entity.py  entity_manager.py  herbivore.py  plant.py  smartie.py
src/inspiration/: ev4.py  full_screen.py  pymunk_platformer.py  pymunk_top_down_scene.py  tank.py  tank_arcade.py  work.py
src/old/: environment.py
src/simulation/: camera_controller.py
