[project]
name = "evotales"
version = "0.1.0"
description = "Simulation game for stories based learning with RL and Transformes architecture"
readme = "README.md"
license = { text = "GPL" }
authors = [{ name = "happyHooman", email = "tornea.alexandru@gmail.com" }]
requires-python = ">=3.11.11,<3.12"
dependencies = [
    "arcade>=3.0.2,<4.0.0",
    "numpy>=2.2.4,<3.0.0",
    "pettingzoo>=1.24.3,<2.0.0",
    "pygame>=2.6.1,<3.0.0",
]

